<resources>
    <string name="app_name">TestZavod</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration">Регистрация</string>
    <string name="have_account">У вас нет аккаунта</string>
    <string name="code">Введите смс код</string>
    <string name="number">Введите номер телефона</string>
    <string name="name">Введите имя</string>
    <string name="user_name">Введите логин</string>
    <string name="auth">Авторизация</string>
    <string name="send_code">Отправить код</string>
    <string name="profile">Профиль</string>
    <string name="map">Карта</string>
    <string name="main">Главная</string>
    <string name="edit">Edit</string>
    <string name="edit_text">Редактирование</string>
</resources>